# lms-course-backup-poc

./: .env  .gitignore  README.md  pyproject.toml
backup-moodle/: .ARCHIVE_INDEX  files.xml  gradebook.xml  moodle_backup.xml  questions.xml
backup-moodle/activities/forum_150/: forum.xml  grading.xml  module.xml
backup-moodle/activities/lesson_149/: grades.xml  inforef.xml  lesson.xml  module.xml
backup-moodle/activities/page_145/: module.xml  page.xml
backup-moodle/activities/page_147/: module.xml  page.xml
backup-moodle/activities/quiz_146/: grades.xml  inforef.xml  module.xml
backup-moodle/course/: competencies.xml  course.xml  enrolments.xml  inforef.xml
backup-openedx/: course.xml
backup-openedx/about/: overview.html  short_description.html
backup-openedx/course/: ongoing.xml
backup-openedx/policies/: assets.json
course-source/: course.yaml
moodle-backup-workspace/: .ARCHIVE_INDEX  moodle_backup.xml
moodle-backup-workspace/course/: completiondefaults.xml  contentbank.xml  course.xml  enrolments.xml
moodle-templates/: groups.xml  moodle_backup.xml
moodle-templates/course/: course.xml
src/course/: dataclasses.py
src/course_entities/: __init__.py  constants.py  content_item.py  content_topic.py  course.py  dependency.py  module.py  module_topic.py  topic.py  utilities.py
src/edx/: config.py  course_dataclasses.py  create.py  import.py  package.py  utilities.py  validate.py  workspace.py
src/moodle/: Lesson.py  create.py  ids.py
tests/: test_course_dataclasses.py  test_course_entities.py
tests/sample-course-source/: course.yaml
(+40 files in other folders)
