[tool.poetry]
name = "course_export"
version = "0.1.0"
description = ""
authors = ["Kurt Moeller <kurt@redis.com>"]
packages = [
    {include = "src", from = "."}
]
[tool.poetry.dependencies]
PyYAML = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
moodle_create = 'src.moodle.create:main'
edx_create = 'src.edx.create:main'
