[tool.poetry]
name = "course_export"
version = "0.1.0"
description = ""
authors = ["Kurt Moeller <kurt@redis.com>"]
packages = [
    {include = "src", from = "."}
]


[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.1"
jinja2 = "^3.1.2"
markdown = "^3.5.2"
olxcleaner = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
moodle_create = 'src.moodle.create:main'
edx_create = 'src.edx.create:main'
edx_validate = 'src.edx.validate:main'